--- a/html.html
+++ b/html.html
@@ -23,7 +23,7 @@
                     <a href="https://lesgemmescontraataquen.neocities.org/"><img class="img" src="media/img/HTML-CSS-JV/aventura.png" alt="historia"></a>
                 </article>
                 <article class="article">
-                    <a href="https://aortega46.github.io/overwatch/principal.html"><img class="img" src="media/img/HTML-CSS-JV/overwatch.png" alt="overwatch"></a>
+                    <a href="https://aortega46.github.io/overwatch/"><img class="img" src="media/img/HTML-CSS-JV/overwatch.png" alt="overwatch"></a>
                 </article>                
                 <article class="article">
                     <a href="https://nuncaserasiempre.neocities.org"><img class="img" src="media/img/HTML-CSS-JV/animacio.png" alt="animacio"></a>
